--- a/排序算法.md
+++ b/排序算法.md
@@ -245,7 +245,7 @@ void hello (){
     }
 ```
 
-## 4选择排序(Selection Sort) 
+## 4 选择排序(Selection Sort) 
 
 ### 4.1 算法描述
 
@@ -281,3 +281,309 @@ void hello (){
 ### 4.3 算法分析
 
 表现最稳定的排序算法之一，因为无论什么数据进去都是O(n^2)的时间复杂度，所以用到它的时候，数据规模越小越好。唯一的好处可能就是不占用额外的内存空间了吧。比冒泡排序要快上一些
+
+## 5 插入排序 (Insertion Sort)
+
+### 5.1 算法描述
+
+插入排序（Insertion-Sort）的算法描述是一种简单直观的排序算法。它的工作原理是通过构建有序序列，对于未排序数据，在已排序序列中从后向前扫描，找到相应位置并插入。
+
+一般来说，插入排序都采用in-place在数组上实现。具体算法描述如下：
+
+- 从第一个元素开始，该元素可以认为已经被排序；
+- 取出下一个元素，在已经排序的元素序列中从后向前扫描；
+- 如果该元素（已排序）大于新元素，将该元素移到下一位置；
+- 重复步骤3，直到找到已排序的元素小于或者等于新元素的位置；
+- 将新元素插入到该位置后；
+- 重复步骤2~5。
+
+![](https://fenrana.oss-cn-beijing.aliyuncs.com/插入排序动画.gif) 
+
+### 5.2 代码实现
+
+```java
+public static void insertSort(int[] arr) {
+        for (int i = 1; i < arr.length; i ++) {
+            int insertVal = arr[i];
+            int insertIndex = i - 1;
+
+            while (insertIndex >= 0 && insertVal < arr[insertIndex]) {
+                arr[insertIndex + 1] = arr[insertIndex];
+                insertIndex--;
+            }
+
+            arr[insertIndex+1] = insertVal;
+        }
+    }
+```
+
+## 6 希尔排序 (Shell Sort)
+
+### 6.1 算法描述
+
+​        希尔排序是希尔（Donald Shell）于1959年提出的一种排序算法。希尔排序也是一种插入排序，它是简单插入排序经过改进之后的一个更高效的版本，也称为缩小增量排序，同时该算法是冲破O(n2）的第一批算法之一。本文会以图解的方式详细介绍希尔排序的基本思想及其代码实现。
+
+​        **希尔排序是把记录按下标的一定增量分组，对每组使用直接插入排序算法排序；随着增量逐渐减少，每组包含的关键词越来越多，当增量减至1时，整个文件恰被分成一组，算法便终止。**
+
+​       简单插入排序很循规蹈矩，不管数组分布是怎么样的，依然一步一步的对元素进行比较，移动，插入，比如[5,4,3,2,1,0]这种倒序序列，数组末端的0要回到首位置很是费劲，比较和移动元素均需n-1次。而希尔排序在数组中采用跳跃式分组的策略，通过某个增量将数组元素划分为若干组，然后分组进行插入排序，随后逐步缩小增量，继续按组进行插入排序操作，直至增量为1。希尔排序通过这种策略使得整个数组在初始阶段达到从宏观上看基本有序，小的基本在前，大的基本在后。然后缩小增量，到增量为1时，其实多数情况下只需微调即可，不会涉及过多的数据移动。
+
+　　我们来看下希尔排序的基本步骤，在此我们选择增量gap=length/2，缩小增量继续以gap = gap/2的方式，这种增量选择我们可以用一个序列来表示，{n/2,(n/2)/2...1}，称为**增量序列**。希尔排序的增量序列的选择与证明是个数学难题，我们选择的这个增量序列是比较常用的，也是希尔建议的增量，称为希尔增量，但其实这个增量序列不是最优的。此处我们做示例使用希尔增量。
+
+![](https://fenrana.oss-cn-beijing.aliyuncs.com/希尔排序图解.png)
+
+### 6.2 代码实现
+
+- 交换法
+
+```java
+    //交换法
+    public static void shellSort(int[] arr) {
+        int temp = 0;
+
+        for (int gap = arr.length / 2; gap > 0; gap = gap / 2) {
+            for (int i = gap; i < arr.length; i++) {
+                for (int j = i - gap; j >= 0; j = j - gap) {
+                    if (arr[j] > arr[j + gap]) {
+                        temp = arr[j];
+                        arr[j] = arr[j + gap];
+                        arr[j + gap] = temp;
+                    }
+                }
+            }
+        }
+    }
+```
+
+- 位移法
+
+  内部使用插入法, 速度比交换快的多.
+
+```java
+//位移法
+    public static void shellSort2(int[] arr) {
+        for (int gap = arr.length / 2; gap > 0; gap /= 2) {
+            //插入排序
+            for (int i = gap; i < arr.length; i++) {
+                int insertVal = arr[i];
+                int insertIndex = i - gap;
+
+                while (insertIndex >= 0 && arr[insertIndex] > insertVal) {
+                    arr[insertIndex + gap] = arr[insertIndex];
+                    insertIndex -= gap;
+                }
+
+                arr[insertIndex + gap] = insertVal;
+            }
+        }
+    }
+```
+
+## 7 快速排序 (Quick Sort)
+
+### 7.1 算法描述
+
+​        快速排序由C. A. R. Hoare在1962年提出。它的基本思想是：通过一趟排序将要排序的数据分割成独立的两部分，其中一部分的所有数据都比另外一部分的所有数据都要小，然后再按此方法对这两部分数据分别进行快速排序，整个排序过程可以递归进行，以此达到整个数据变成有序序列.
+
+- 选定一个Pivot中心轴 (可以为任意值, 一般为最右边的)
+
+- 将大于pivot的值放在pivot的右边
+
+- 将小于pivot的值放在pivot的左边
+
+- 分别对左右子序列进行前三步操作
+
+### 7.2 代码实现
+
+代码实现不唯一, 有很多的版本.
+
+```java
+ public static void quickSort1(int[] arr, int left, int right) {
+        if (left >= right) {
+            return;
+        }
+        int l = left;
+        int r = right;
+
+        int pivot = arr[right];
+        while (l < r) {
+            while (arr[l] <= pivot && l < r) {
+                l++;
+            }
+            if (l < r) {
+                arr[r] = arr[l];
+            }
+            while (arr[r] >= pivot && l < r) {
+                r--;
+            }
+
+            if (l < r) {
+                arr[l] = arr[r];
+            }
+
+
+            if (l >= r) {
+                arr[r] = pivot;
+            }
+        }
+        quickSort1(arr, left, r - 1);
+        quickSort1(arr, l + 1, right);
+    }
+```
+
+## 8 归并排序 (Merfe Sort)
+
+### 8.1 算法描述
+
+​        归并排序（MERGE-SORT）是利用**归并**的思想实现的排序方法，该算法采用经典的**分治**（divide-and-conquer）策略（分治法将问题**分**(divide)成一些小的问题然后递归求解，而**治(conquer)**的阶段则将分的阶段得到的各答案"修补"在一起，即分而治之)
+
+- **分而治之**
+
+![](https://fenrana.oss-cn-beijing.aliyuncs.com/归并排序分而治之.png)
+
+​         可以看到这种结构很像一棵完全二叉树，本文的归并排序我们采用递归去实现（也可采用迭代的方式去实现）。**分**阶段可以理解为就是递归拆分子序列的过程，递归深度为log2n。
+
+- 合并相邻的有序子序列
+
+​          再来看看**治**阶段，我们需要将两个已经有序的子序列合并成一个有序序列，比如上图中的最后一次合并，要将[4,5,7,8]和[1,2,3,6]两个已经有序的子序列，合并为最终序列[1,2,3,4,5,6,7,8]，来看下实现步骤。
+
+![](https://fenrana.oss-cn-beijing.aliyuncs.com/归并排序治.png)
+
+### 8.2 代码实现
+
+```java
+package cn.fenrana.sort;
+
+import java.time.LocalDateTime;
+import java.util.Arrays;
+
+public class MergeSort {
+    public static void main(String[] args) {
+
+        int[] arr = {8, 4, 5, 7, 1, 3, 6, 2};
+        int[] temp = new int[arr.length];
+        System.out.println("排序前");
+        System.out.println(Arrays.toString(arr));
+        mergeSort(arr, 0, arr.length - 1, temp);
+        System.out.println("排序后");
+        System.out.println(Arrays.toString(arr));
+    }
+
+    public static void mergeSort(int[] arr, int left, int right, int[] temp) {
+        if (left < right) {
+            int mid = (left + right) / 2;
+            //向左分治
+            mergeSort(arr, left, mid, temp);
+            //向右分治
+            mergeSort(arr, mid + 1, right, temp);
+            merge(arr, left, mid, right, temp);
+        }
+    }
+
+    /**
+     * @param left  数组开始的下标
+     * @param right 数组结束的下标
+     * @param mid   中间
+     */
+    public static void merge(int[] arr, int left, int mid, int right, int[] temp) {
+        int i = left;  //左序列开始的下标
+        int j = mid + 1; //右序列开始的下标
+        int t = 0; // 临时数组的下标
+        /**
+         * 比较两个数组,
+         * */
+        while (i <= mid && j <= right) {
+            if (arr[i] <= arr[j]) {
+                temp[t] = arr[i];
+                i += 1;
+            } else {
+                temp[t] = arr[j];
+                j += 1;
+            }
+            t += 1;
+
+        }
+        //把两个数组中剩余的数放到临时数组中
+        while (i <= mid) {
+            temp[t] = arr[i];
+            t += 1;
+            i += 1;
+        }
+
+        while (j <= right) {
+            temp[t] = arr[j];
+            t += 1;
+            j += 1;
+        }
+
+        //把临时数组的值复制到数组
+        t = 0;
+        int tempLeft = left;
+        while (tempLeft <= right) {
+            arr[tempLeft] = temp[t];
+            tempLeft++;
+            t++;
+        }
+
+    }
+}
+
+```
+
+## 9 基数排序
+
+### 9.1 算法描述
+
+​        基数排序（radix sort）属于“分配式排序”（distribution sort），又称“桶子法”（bucket sort）或bin sort，顾名思义，它是透过键值的部份资讯，将要排序的元素分配至某些“桶”中，藉以达到排序的作用，基数排序法是属于稳定性的排序，其时间复杂度为O (nlog(r)m)，其中r为所采取的基数，而m为堆数，在某些时候，基数排序法的效率高于其它的稳定性排序法。
+
+![](https://fenrana.oss-cn-beijing.aliyuncs.com/基数排序动图.gif)
+
+### 9.2 代码实现
+
+```java
+    public static void radixSort(int[] arr) {
+        //得到数组中的最大数
+        int max = arr[0];
+        for (int i = 0; i < arr.length; i++) {
+            if (arr[i] > max) {
+                max = arr[i];
+            }
+        }
+
+        //得到最大的是几位数
+        int length = (max + "").length();
+
+        //定义一个二维数组, 表示十个桶
+        //说明
+        //1. 二维数组包含10个一维数组
+        //2. 为了防止在放入数的时候，数据溢出，则每个一维数组(桶)，大小定为arr.length
+        //3. 名明确，基数排序是使用空间换时间的经典算法
+        int[][] bucket = new int[10][arr.length];
+
+        //为了记录每个桶中，实际存放了多少个数据,我们定义一个一维数组来记录各个桶的每次放入的数据个数
+        //可以这里理解
+        //比如：bucketElementCounts[0] , 记录的就是  bucket[0] 桶的放入数据个数
+        int[] bucketElementCounts = new int[10];
+
+
+        for (int i = 0, n = 1; i < length; i++, n *= 10) {
+            // 往桶中放数据
+            for (int value : arr) {
+                int digitOfElement = value / n % 10;
+                bucket[digitOfElement][bucketElementCounts[digitOfElement]] = value;
+                bucketElementCounts[digitOfElement]++;
+            }
+            // 从桶中取出数据
+            int index = 0;
+            for (int a = 0; a < bucketElementCounts.length; a++) {
+                if (bucketElementCounts[a] != 0) {
+                    for (int l = 0; l < bucketElementCounts[a]; l++) {
+                        arr[index] = bucket[a][l];
+                        index++;
+                    }
+                }
+                bucketElementCounts[a] = 0;
+            }
+        }
+    }
+```
+
