--- a/查找算法.md
+++ b/查找算法.md
@@ -24,3 +24,69 @@
 
 ## 1 顺序查找
 
+​         **说明：顺序查找适合于存储结构为顺序存储或链接存储的线性表。**
+
+　　**基本思想：**顺序查找也称为线形查找，属于无序查找算法。从数据结构线形表的一端开始，顺序扫描，依次将扫描到的结点关键字与给定值k相比较，若相等则表示查找成功；若扫描结束仍没有找到关键字等于k的结点，表示查找失败。
+
+```java
+    public static int seqSearch(int[] arr, int target) {
+        for (int i =0; i < arr.length; i ++ ) {
+            if (arr[i] == target) {
+                return i;
+            }
+        }
+        return -1;
+    }
+```
+
+## 2 二分查找
+
+二分查找只能查找有序数字
+
+- 递归方式实现
+
+  ```java
+      //递归实现
+      public static int binarySearch(int[] arr, int left, int right, int target) {
+          if (left >= right) {
+              return -1;
+          }
+  
+          int mid = (left + right) / 2;
+  
+          if (arr[mid] > target) {
+              //向左
+              return binarySearch(arr, left, mid - 1, target);
+          } else if (arr[mid] < target) {
+              //向右
+              return binarySearch(arr, mid + 1, right, target);
+          } else if (arr[mid] == target) {
+              return mid;
+          }
+  
+          return -1;
+  
+      }
+  ```
+
+- while实现
+
+  ```java
+   //while循环实现
+      public static int binarySearch2(int[] arr, int left, int right, int target) {
+  
+          while (left <= right) {
+              int mid = (left + right) / 2;
+              if (arr[mid] > target) {
+                  right = mid - 1;
+              } else if (arr[mid] < target) {
+                  left = mid + 1;
+              } else if (arr[mid] == target) {
+                  return mid;
+              }
+          }
+          return -1;
+      }
+  ```
+
+  
