--- a/查找算法.md
+++ b/查找算法.md
@@ -89,4 +89,37 @@
       }
   ```
 
+  ## 差值查找
   
+  插值查找是二分查找的**改进版**。
+  它是根据要查找的关键字 key 与查找表中的最大最小记录的关键字比较后的查找方法，
+  其核心在于**差值的计算公式 (key-arr[low]) / (arr[high]-arr[Low])**
+
+```java
+    public static int insertValueSearch(int[] arr, int left, int right, int findVal) {
+        System.out.println("我只系");
+        if (left > right || findVal < arr[0] || findVal > arr[arr.length - 1]) {
+            return -1;
+        }
+
+        int mid = left + (right - left) * (findVal - arr[left]) / (arr[right] - arr[left]);
+
+        if (arr[mid] > findVal) {
+            return insertValueSearch(arr, left, mid - 1, findVal);
+        } else if (arr[mid] < findVal) {
+            return insertValueSearch(arr, mid + 1, right, findVal);
+        } else {
+            return mid;
+        }
+    }
+```
+
+时间复杂度 O(logn)
+
+
+**对于数组较大，关键字分布比较均匀，插值查找性能比二分查找性能好得多**
+
+**但若数组关键字大小分布极不均匀，插值查找未必合适**
+
+## 3 斐波那契查找
+
