--- a/排序算法.md
+++ b/排序算法.md
@@ -256,13 +256,13 @@ void hello (){
 
 ### 4.2 代码实现
 
-```java
+*```java*
  public static void selectionSort(int[] arr) {
 
         for (int i = 0; i < arr.length - 1; i++) {
             int min = arr[i];
             int minIndex = i;
-
+    
             for (int j = i + 1; j < arr.length; j++) {
                 if (min > arr[j]) {
                     min = arr[j];
@@ -302,7 +302,7 @@ void hello (){
 
 ### 5.2 代码实现
 
-```java
+​```java
 public static void insertSort(int[] arr) {
         for (int i = 1; i < arr.length; i ++) {
             int insertVal = arr[i];
@@ -584,6 +584,67 @@ public class MergeSort {
                 }
                 bucketElementCounts[a] = 0;
             }
+        }
+    }
+```
+
+## 10 堆排序（Heap Sort）
+
+### 10.1 算法描述
+
+堆排序（Heapsort）是指利用堆这种数据结构所设计的一种排序算法。堆积是一个近似完全二叉树的结构，并同时满足堆积的性质：即子结点的键值或索引总是小于（或者大于）它的父节点。
+
+![堆排序](https://fenrana.oss-cn-beijing.aliyuncs.com/堆排序.gif)
+
+### 10.2 代码排序
+
+```java
+ /**
+     * @param i 从哪个节点开始
+     * @param n 一共有多少个节点
+     */
+    public static void heapify(int[] tree, int n, int i) {
+        if (i >= n) {
+            return;
+        }
+        int c1 = 2 * i + 1;
+        int c2 = 2 * i + 2;
+        int max = i;
+
+        if (c1 < n && tree[c1] > tree[max]) {
+            max = c1;
+        }
+
+        if (c2 < n && tree[c2] > tree[max]) {
+            max = c2;
+        }
+
+        if (max != i) {
+            swap(tree, max, i);
+            heapify(tree, n, max);
+        }
+    }
+
+    public static void swap(int[] tree, int i, int j) {
+        int temp = tree[i];
+        tree[i] = tree[j];
+        tree[j] = temp;
+
+    }
+
+    public static void buildHeap(int[] tree, int n) {
+        int laseNode = n - 1;
+        int parent = (laseNode - 1) / 2;
+        for (int i = parent; i >= 0; i--) {
+            heapify(tree, n, i);
+        }
+    }
+
+    public static void heapSort(int[] tree, int n) {
+        buildHeap(tree, n);
+        for (int i = n -1; i >= 0; i--) {
+            swap(tree, i, 0);
+            heapify(tree, i, 0);
         }
     }
 ```
