--- a/二叉树.md
+++ b/二叉树.md
@@ -540,4 +540,462 @@ class HeroNode {
       }
   ```
 
-  
+## 7 哈夫曼树(Huffman)
+
+给定N个权值作为N个叶子结点，构造一棵二叉树，**若该树的带权路径长度达到最小**，称这样的二叉树为`最优二叉树`，也称为`哈夫曼树(Huffman Tree)`。哈夫曼树是带权路径长度最短的树，权值较大的结点离根较近。
+
+其中`WPL`表示计算出的权值。至于为什么按照哈夫曼树方法构造得到的权重最小。这里不进行证明。对于哈夫曼树，他的每个`非叶子节点都有两个孩子`因为哈夫曼树的构造就是`自底向上的构造`，两两合并。
+
+**WPL计算方法**: WPL=`求和(wi li)`其中wi是第i个节点的权值(value)。li是第i个节点的`长(深)度`.
+
+![哈夫曼树的构造](https://fenrana.oss-cn-beijing.aliyuncs.com/哈夫曼树的构造.jpg)
+
+
+```java
+
+public class HuffmanTree {
+    public static void main(String[] args) {
+        int arr[] = {13, 7, 8, 3, 29, 6, 1};
+        Node huffman = createHuffman(arr);
+        preOrder(huffman);
+    }
+
+    public static Node createHuffman(int[] arr) {
+        List<Node> nodes = new ArrayList<>();
+        for (int i : arr) {
+            nodes.add(new Node(i));
+        }
+
+        while (nodes.size() > 1) {
+            Collections.sort(nodes);
+            Node node1 = nodes.get(0);
+            Node node2 = nodes.get(1);
+            Node root = new Node(node1.value + node2.value);
+            root.left = node1;
+            root.right = node2;
+
+            nodes.remove(node1);
+            nodes.remove(node2);
+            nodes.add(root);
+        }
+        return nodes.get(0);
+    }
+
+    public static void preOrder(Node root) {
+        if (root != null) {
+            root.preOrder();
+        }else {
+            System.out.printf("sss");
+        }
+    }
+
+}
+
+class Node implements Comparable<Node> {
+
+    int value;
+    Node left;
+    Node right;
+
+    public Node(int value) {
+        this.value = value;
+    }
+
+    @Override
+    public int compareTo(Node o) {
+        return this.value - o.value;
+    }
+
+    public void preOrder() {
+        System.out.println(this);
+        if (this.left != null) {
+            this.left.preOrder();
+        }
+
+        if (this.right != null) {
+            this.right.preOrder();
+        }
+    }
+
+    @Override
+    public String toString() {
+        return "Node{" +
+                "value=" + value +
+                '}';
+    }
+}
+
+```
+
+## 8 二叉排序树
+
+二叉排序树：BST: (Binary Sort(Search) Tree), 对于二叉排序树的任何一个非叶子节点，要求左子节点的值比当前节点的值小，右子节点的值比当前节点的值大。
+
+**特别说明**：如果有相同的值，可以将该节点放在左子节点或右子节点
+
+
+
+比如针对前面的数据 (8，3，10，1，6,  14,  4,  7, 13) ，对应的二叉排序树为：
+
+![二叉排序树](https://fenrana.oss-cn-beijing.aliyuncs.com/img/二叉排序树.png)
+
+### 8.1 树的结构
+
+```java
+class Node {
+    int val;
+    Node left;
+    Node right;
+
+    public Node(int val) {
+        this.val = val;
+    }
+
+    public void infxOrder() {
+        if (this.left != null) {
+            this.left.infxOrder();
+        }
+        System.out.println(this);
+        if (this.right != null) {
+            this.right.infxOrder();
+        }
+    }
+
+
+    @Override
+    public String toString() {
+        return "Node{" +
+                "val=" + val +
+                '}';
+    }
+}
+
+```
+
+### 8.2 添加
+
+添加的过程
+
+- 每次都从根节点开始
+- 大于根节点的添加到根节点的右侧
+- 小于根节点的添加到根节点的左侧
+
+```java
+    public void add(Node node) {
+        if (node.val < this.val) {
+            if (this.left == null) {
+                this.left = node;
+            } else {
+                this.left.add(node);
+            }
+        } else {
+            if (this.right == null) {
+                this.right = node;
+            } else {
+                this.right.add(node);
+            }
+        }
+    }
+```
+
+### 8.3 搜索
+
+搜索过程
+
+- 如果搜素的值大于当前节点，则往右侧搜索
+- 如果搜素的值小于当前节点，则往左侧搜索
+- 如果两个值相等， 则返回当前节点
+
+```java
+    public Node search(int value) {
+        if (this.val == value) {
+            return this;
+        }
+        if (value < this.val) {
+            if (this.left == null) {
+                return null;
+            }
+            return this.left.search(value);
+        } else {
+            if (this.right == null) {
+                return null;
+            }
+            return this.right.search(value);
+
+        }
+    }
+```
+
+搜索一个节点的父节点
+
+```java
+public Node searchParent(int value) {
+        //如果当前结点就是要删除的结点的父结点，就返回
+        if ((this.left != null && this.left.val == value) ||
+                (this.right != null && this.right.val == value)) {
+            return this;
+        } else {
+            //如果查找的值小于当前结点的值, 并且当前结点的左子结点不为空
+            if (value < this.val && this.left != null) {
+                return this.left.searchParent(value); //向左子树递归查找
+            } else if (value >= this.val && this.right != null) {
+                return this.right.searchParent(value); //向右子树递归查找
+            } else {
+                return null; // 没有找到父结点
+            }
+        }
+
+    }
+```
+
+### 8.4 删除
+
+删除一个节点有三种情况
+
+1.  删除的节点是一个叶子节点， 就是左右节点为空
+
+    找到要删除的节点和其父节点， 判断当前节点是父节点的左子节点还是右子节点。如果是右子节点，就把父节点的右子节点置为空。左子节点同理。
+
+2.  删除的节点有一个子节点，可能为右子节点也可能为左子节点。
+
+   找到要删除的节点和其父节点，先判断出当前节点的子节点是左还是右， 再判断当前节点是父节点的左子节点还是右子节点 。如果子节点是左子节点，当前节点是父节点的左节点，就把父节点的左节点的值置为当前节点的左字节，当前节点是父节点的右节点，就把父节点的右节点的值置为当前节点的左字节。
+
+   如果子节点是右子节点，当前节点是父节点的左节点，就把父节点的左节点的值置为当前节点的右字节，当前节点是父节点的右节点，就把父节点的欧节点的值置为当前节点的右字节。
+
+3. 删除的节点有两个节点，  找到要删除的节点，向右子节点找出最小的值，赋值给当前节点并删除，或者是向左子节点查找出最大的值，赋值给当前节点并删除。
+
+```java
+ public void delNode(int value) {
+        if (root == null) {
+            return;
+        } else {
+//            1. 找到要删除的节点
+            Node target = search(value);
+            //判断要删的节点找到没
+            if (target == null) {
+                return;
+            }
+            //如果只有一个节点的二叉树
+            if (root.left == null && root.right == null) {
+                root = null;
+                return;
+            }
+            // 找到要删除节点的父节点
+            Node parent = searchParent(value);
+            //如果要删除的节点， 是叶子节点
+            if (target.right == null && target.left == null) {
+                //删除叶子节点
+                //判断targetNode是 父节点的左子节点还是子右节点
+                if (parent.left != null && parent.left.val == value) {
+                    parent.left = null;
+                } else if (parent.right != null && parent.right.val == value) {
+                    parent.right = null;
+                }
+
+            } else if (target.left != null && target.right != null) {
+                //目标有两个子节点
+                target.val = delRightTreeMin(target.right);
+
+            } else {
+                //目标只有一个节点
+                //如果要删除的节点是左节点
+                if (target.left != null) {
+                    //判断parent 是否为空
+                    if (parent != null) {
+                        //如果要删除target是 parent 的左节点
+                        if (parent.left.val == value) {
+                            parent.left = target.left;
+                        } else {
+                            //反之
+                            parent.right = target.left;
+                        }
+                    }else {
+                        target = target.left;
+                    }
+
+                } else {
+                    //判断parent是否为空
+                    if (parent != null) {
+                        // 如果要删除target是 parent 的右节点
+                        if (parent.right.val == value) {
+                            parent.right = target.right;
+                        } else {
+                            parent.left = target.right;
+                        }
+                    }else {
+                        target = target.right;
+                    }
+
+                }
+            }
+
+        }
+```
+
+##  9. 平衡二叉树 (AVL树)
+
+### 9.1 为什么要平衡二叉树
+
+二叉搜索树一定程度上可以提高搜索效率，但是当原序列有序时，例如序列 A = {1，2，3，4，5，6}，构造二叉搜索树如图 1.1。依据此序列构造的二叉搜索树为右斜树，同时二叉树退化成单链表，搜索效率降低为 O(n)。
+
+![二叉树退还成单链表](https://fenrana.oss-cn-beijing.aliyuncs.com/img/二叉树退还成单链表.png)
+
+在此二叉搜索树中查找元素 6 需要查找 6 次。
+
+二叉搜索树的查找效率取决于树的高度，因此保持树的高度最小，即可保证树的查找效率。同样的序列 A，将其下图 的方式存储，查找元素 6 时只需比较 3 次，查找效率提升一倍。
+
+![](https://fenrana.oss-cn-beijing.aliyuncs.com/img/平衡二叉树.png)
+
+### 9.2 平衡二叉树的定义
+
+**平衡二叉查找树**：简称平衡二叉树。由前苏联的数学家 **A**delse-**V**elskil 和 **L**andis 在 1962 年提出的高度平衡的二叉树，根据科学家的英文名也称为 AVL 树。它具有如下几个性质：
+
+1. 可以是空树。
+2. 假如不是空树，任何一个节点的左子树与右子树都是平衡二叉树，并且高度之差的绝对值不超过 1。
+
+平衡之意，如天平，即两边的分量大约相同。
+
+### 9.3 平衡因子
+
+**定义：**某节点的左子树与右子树的高度(深度)差即为该节点的平衡因子（BF,Balance Factor），平衡二叉树中不存在平衡因子大于 1 的节点。在一棵平衡二叉树中，节点的平衡因子只能取 0 、1 或者 -1 ，分别对应着左右子树等高，左子树比较高，右子树比较高。
+
+### 9.4 AVL树插入时的失衡与调整
+
+**最小失衡子树**：在新插入的节点向上查找，以第一个平衡因子的**绝对值**超过 1 的节点为根的子树称为最小不平衡子树。也就是说，一棵失衡的树，是有可能有多棵子树同时失衡的。而这个时候，我们只要调整最小的不平衡子树，就能够将不平衡的树调整为平衡的树。
+
+**平衡二叉树的失衡调整主要是通过旋转最小失衡子树来实现的**。根据旋转的方向有两种处理方式，**左旋** 与 **右旋** 。
+
+旋转的目的就是减少高度，通过降低整棵树的高度来平衡。哪边的树高，就把那边的树向上旋转。
+
+### 9.5 左旋
+
+因为右子树高度高于左子树，对节点进行左旋操作，流程如下：
+
+（1）节点的右孩子替代此节点位置
+（2）右孩子的左子树变为该节点的右子树
+（3）节点本身变为右孩子的左子树
+
+![](https://fenrana.oss-cn-beijing.aliyuncs.com/img/平衡二叉树的左旋.gif)
+
+```java
+   /**
+     * 左旋转平衡二叉树
+     */
+    public void leftRotate() {
+        //创建新的节点，以当前节点的值
+        var newNode = new Node(val);
+        //把新节点的左子树，设置成当前节点的左子树
+        newNode.left = left;
+        //把新节点的右子树，设置成当前节点的右子树的左子树
+        newNode.right = right.left;
+        // 把当前节点的值，设置成右子节点的值
+        val = right.val;
+        //把当前节点的右子树，设置成当前节点右子树的右子树
+        right = right.right;
+        //把当前节点的左子树，设置成新的节点
+        left = newNode;
+    }
+
+
+```
+
+### 9.6 右旋
+
+右旋操作与左旋类似，操作流程为：
+
+（1）节点的左孩子代表此节点
+（2）节点的左孩子的右子树变为节点的左子树
+（3）将此节点作为左孩子节点的右子树。
+
+![](https://fenrana.oss-cn-beijing.aliyuncs.com/img/平衡二叉树的右旋.gif)
+
+```java
+    /**
+     * 右旋转平衡二叉树
+     */
+    public void rightRotate() {
+        //创建一个新的节点
+        var newNode = new Node(val);
+        newNode.right = right;
+        newNode.left = left.right;
+        val = left.val;
+        left = left.left;
+        right = newNode;
+    }
+```
+
+### 9.7 其他方面
+
+```java
+    /**
+     * 返回以该节点为根节点的高度
+     */
+    public int height() {
+        return Math.max(left == null ? 0 : left.height(), right == null ? 0 : right.height()) + 1;
+    }
+
+    /**
+     * 左子树的高度
+     *
+     * @return 左子树的高度
+     */
+    public int leftHeight() {
+        if (left == null) {
+            return 0;
+        } else {
+            return left.height();
+        }
+    }
+
+    /**
+     * 右字树的高度
+     */
+    public int rightHeight() {
+        if (right == null) {
+            return 0;
+        }
+        return right.height();
+
+    }
+```
+
+> 在插入时判断是否旋转
+
+```java
+    public void add(Node node) {
+        if (node.val < this.val) {
+            if (this.left == null) {
+                this.left = node;
+            } else {
+                this.left.add(node);
+            }
+        } else {
+            if (this.right == null) {
+                this.right = node;
+            } else {
+                this.right.add(node);
+            }
+        }
+
+        //右字节点的高度大于左子节点, 进行坐旋转
+        if (rightHeight() - leftHeight() > 1) {
+            //如果当前节点的右子树的左子树高度大于当前节点右子树的右子树
+            if (right != null && right.leftHeight() > right.rightHeight()) {
+                //先对当前节点的右子节点进行右旋转
+                right.rightRotate();
+            }
+            leftRotate();
+            return;
+        }
+        //左字节点的高度大于右子节点, 进行右旋转
+        if (leftHeight() - rightHeight() > 1) {
+            //如果当前节点的左子树的右子树的高度大于当前节点的左子树的左子树
+            if (left != null && left.rightHeight() > left.leftHeight()) {
+                //对当前节点的左子节点进行左旋转
+                left.leftRotate();
+            }
+            rightRotate();
+        }
+    }
+```
+
